--- a/style.css
+++ b/style.css
@@ -130,8 +130,9 @@
   
   /* PLAYLIST */
   .playlist {
-    margin-top: 408px;
+    margin-top: 403px;
     padding: 12px;
+    background: linear-gradient(#e66465, #9198e5);
     /* overflow-y: scroll;
     max-height: calc(100vh - 403px); */
   }
