--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@
     background-size: cover;
     margin: auto;
   }
+
+  
+  
   
   /* CONTROL */
   .control {
@@ -86,6 +89,46 @@
     padding: 18px 0 8px 0;
   }
   
+  .volume {
+    position: absolute;
+    top: 81px;
+    right: 51px;
+    width: 10px;
+    text-align: center;
+  }
+
+  .volume-magnitude {
+    display: none;
+    transform: rotate(90deg);
+    position: absolute;
+    top: 81px;
+    left: -56px;
+    /* appearance: none; */
+    /* background-color: var(--primary-color); */
+    color: var(--primary-color);
+    cursor: pointer;
+  }
+
+  .volume.active  .volume-magnitude {
+    display: block;
+  }
+
+  .icon-volume-up,
+  .icon-volume-down,
+  .icon-volume-off {
+    display: none;
+  }
+
+  .icon-volume-up.active {
+    display: block;
+  }
+  .icon-volume-down.active {
+    display: block;
+  }
+  .icon-volume-off.active {
+    display: block;
+  }
+
   .control .btn {
     color: #666;
     padding: 18px;
