--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
   .volume {
     position: absolute;
     top: 81px;
-    right: 51px;
+    right: 62px;
     width: 10px;
     text-align: center;
   }
@@ -101,8 +101,8 @@
     display: none;
     transform: rotate(90deg);
     position: absolute;
-    top: 81px;
-    left: -56px;
+    top: 90px;
+    left: -51px;
     /* appearance: none; */
     /* background-color: var(--primary-color); */
     color: var(--primary-color);
@@ -116,6 +116,7 @@
   .icon-volume-up,
   .icon-volume-down,
   .icon-volume-off {
+    font-size: 28px;
     display: none;
   }
 
