--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
   
   .volume {
     position: absolute;
-    top: 81px;
+    top: 24px;
     right: 62px;
     width: 10px;
     text-align: center;
@@ -118,6 +118,7 @@
   .icon-volume-off {
     font-size: 28px;
     display: none;
+    color: var(--primary-color);
   }
 
   .icon-volume-up.active {
