--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     width: 52px;
+    color: #fff;
   }
 
   .volume-magnitude {
